a11y: Crash in "Hypertext" gtk4-demo when selecting the level bar object in Accerciser
Steps to reproduce
- start Accerciser
- start gtk4-demo, run the "Hypertext" example
- in Accerciser, navigate through the a11y tree of the application and select the level bar object with name "50"
Alternatively, instead of using Accerciser, you can also run the attached pyatspi script after starting the sample app:
pyatspi-script-gtk4-demo-hypertext-crash-change-on-value-change.py
Current behavior
Both, gtk4-dem and Accerciser crash.
Output for gtk4-demo:
GLib-GIO:ERROR:../../../gio/gdbusconnection.c:4354:invoke_set_property_in_idle_cb: assertion failed: (error != NULL)
Bail out! GLib-GIO:ERROR:../../../gio/gdbusconnection.c:4354:invoke_set_property_in_idle_cb: assertion failed: (error != NULL)
Aborted
Output for Accerciser:
(accerciser:469595): dbind-WARNING **: 08:58:15.577: AT-SPI: Error in GetItems, sender=:1.268, error=Object does not exist at path “/org/a11y/atspi/cache”
dbus[469595]: arguments to dbus_message_unref() were incorrect, assertion "message != NULL" failed in file ../../../dbus/dbus-message.c line 1727.
This is normally a bug in some application using the D-Bus library.
D-Bus not built with -rdynamic so unable to print a backtrace
Aborted (core dumped)
Version information
- gtk git main as of 1297cc18, self-compiled on Debian testing.
- Accerciser 3.42